--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -10,6 +10,9 @@ versions.rxandroid = "2.1.1"
 versions.rxjava = "2.1.1"
 versions.koin = "2.0.1"
 versions.gson = "2.8.5"
+versions.activity = "1.2.1"
+versions.fragment = "1.3.1"
+versions.android_gradle_plugin = "4.1.0"
 
 def deps = [:]
 
@@ -61,4 +64,22 @@ reactive.rxandroid = "io.reactivex.rxjava2:rxandroid:$versions.rxandroid"
 reactive.rxjava = "io.reactivex.rxjava2:rxjava:$versions.rxjava"
 deps.reactive = reactive
 
+
+deps.activity = "androidx.activity:activity-ktx:$versions.activity"
+deps.fragment = "androidx.fragment:fragment-ktx:$versions.fragment"
+deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
+
 ext.deps = deps
+
+def build_versions = [:]
+build_versions.min_sdk = 16
+build_versions.target_sdk = 30
+build_versions.build_tools = "30.0.2"
+ext.build_versions = build_versions
+
+static def addRepos(RepositoryHandler handler) {
+    handler.google()
+    handler.jcenter()
+}
+
+ext.addRepos = this.&addRepos
