--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,44 +1,39 @@
-plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
-}
-
-android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
-
-    defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-}
+apply from: '../android-library.gradle'
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.1.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    //activity
+    api deps.activity
+    api deps.fragment
+
+    //Support
+    api deps.support.annotations
+    api deps.support.app_compat
+    api deps.support.recyclerview
+    api deps.support.cardview
+    api deps.support.design
+    api deps.support.v4
+    api deps.support.core_utils
+    api deps.support.constraint_layout
+
+    // Lifecycle
+    api deps.lifecycle.extensions
+    api deps.lifecycle.java8
+    api deps.lifecycle.livedata
+    kapt deps.lifecycle.compiler
+
+    api deps.kotlin.stdlib
+    api deps.kotlin.ktx
+
+    // Koin
+    api deps.koin.core
+    api deps.koin.scope
+    api deps.koin.android
+    api deps.koin.viewmodel
+
+    //RxJava
+    api deps.reactive.rxjava
+    api deps.reactive.rxandroid
 }
