--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,17 +2,19 @@ ext.deps = [:]
 
 def versions = [:]
 versions.lifecycle = "2.2.0"
+versions.lifecycle_ktx = "2.4.0"
 versions.support = "1.0.0"
 versions.retrofit = "2.7.2"
 versions.constraint_layout = "2.0.4"
-versions.kotlin = "1.4.10"
+versions.kotlin = "1.7.20"
 versions.rxandroid = "2.1.1"
 versions.rxjava = "2.1.1"
 versions.koin = "2.0.1"
 versions.gson = "2.8.5"
 versions.activity = "1.2.1"
 versions.fragment = "1.3.1"
-versions.android_gradle_plugin = "4.1.0"
+versions.android_gradle_plugin = '7.3.1'
+versions.compose = "1.2.1"
 
 def deps = [:]
 
@@ -33,6 +35,7 @@ lifecycle.java8 = "androidx.lifecycle:lifecycle-common-java8:$versions.lifecycle
 lifecycle.livedata = "androidx.lifecycle:lifecycle-livedata-ktx:$versions.lifecycle"
 lifecycle.compiler = "androidx.lifecycle:lifecycle-compiler:$versions.lifecycle"
 lifecycle.reactive = "androidx.lifecycle:lifecycle-reactivestreams:$versions.lifecycle"
+lifecycle.viewmodel = "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycle_ktx"
 deps.lifecycle = lifecycle
 
 def network = [:]
@@ -64,6 +67,16 @@ reactive.rxandroid = "io.reactivex.rxjava2:rxandroid:$versions.rxandroid"
 reactive.rxjava = "io.reactivex.rxjava2:rxjava:$versions.rxjava"
 deps.reactive = reactive
 
+def compose = [:]
+compose.ui = "androidx.compose.ui:ui:$versions.compose"
+compose.ui_tooling = "androidx.compose.ui:ui-tooling:$versions.compose"
+compose.foundation = "androidx.compose.foundation:foundation:$versions.compose"
+compose.material = "androidx.compose.material:material:$versions.compose"
+compose.material_icons = "androidx.compose.material:material-icons-extended:$versions.compose"
+compose.livedata = "androidx.compose.runtime:runtime-livedata:$versions.compose"
+compose.activity = "androidx.activity:activity-compose:$versions.compose"
+deps.compose = compose
+
 
 deps.activity = "androidx.activity:activity-ktx:$versions.activity"
 deps.fragment = "androidx.fragment:fragment-ktx:$versions.fragment"
@@ -72,8 +85,8 @@ deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_g
 ext.deps = deps
 
 def build_versions = [:]
-build_versions.min_sdk = 16
-build_versions.target_sdk = 30
+build_versions.min_sdk = 21
+build_versions.target_sdk = 32
 build_versions.build_tools = "30.0.2"
 ext.build_versions = build_versions
 
