--- a/android-library.gradle
+++ b/android-library.gradle
@@ -56,6 +56,15 @@ android {
         unitTests.returnDefaultValues = true
     }
 
+    buildFeatures {
+        // Enables Jetpack Compose for this module
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.3.2"
+    }
+
 
 }
 
