add launch screen (avoid white screen when cold start) + use animation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StarWarsAppMVVM">
-        <activity android:name="com.example.presentation.MainActivity"
-            android:exported="true">
+        <activity android:name="com.example.presentation.LaunchActivity"
+            android:exported="true"
+            android:theme="@style/LaunchTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="com.example.presentation.MainActivity"
+            android:exported="true">
         </activity>
     </application>
 
