--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,6 +15,7 @@ versions.activity = "1.2.1"
 versions.fragment = "1.3.1"
 versions.android_gradle_plugin = '7.3.1'
 versions.compose = "1.2.1"
+versions.navigation = "2.5.2"
 
 def deps = [:]
 
@@ -75,6 +76,7 @@ compose.material = "androidx.compose.material:material:$versions.compose"
 compose.material_icons = "androidx.compose.material:material-icons-extended:$versions.compose"
 compose.livedata = "androidx.compose.runtime:runtime-livedata:$versions.compose"
 compose.activity = "androidx.activity:activity-compose:$versions.compose"
+compose.navigation = "androidx.navigation:navigation-compose:$versions.navigation"
 deps.compose = compose
 
 
