--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -16,6 +16,7 @@ versions.fragment = "1.3.1"
 versions.android_gradle_plugin = '7.3.1'
 versions.compose = "1.2.1"
 versions.navigation = "2.5.2"
+versions.pager = "0.25.1"
 
 def deps = [:]
 
@@ -77,6 +78,7 @@ compose.material_icons = "androidx.compose.material:material-icons-extended:$ver
 compose.livedata = "androidx.compose.runtime:runtime-livedata:$versions.compose"
 compose.activity = "androidx.activity:activity-compose:$versions.compose"
 compose.navigation = "androidx.navigation:navigation-compose:$versions.navigation"
+compose.pager = "com.google.accompanist:accompanist-pager:$versions.pager"
 deps.compose = compose
 
 
