--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -14,7 +14,7 @@ versions.fragment = "1.3.1"
 versions.android_gradle_plugin = '7.3.1'
 versions.compose = "1.2.1"
 versions.navigation = "2.5.2"
-versions.pager = "0.25.1"
+versions.accompanist = "0.25.1"
 
 def deps = [:]
 
@@ -72,7 +72,8 @@ compose.material_icons = "androidx.compose.material:material-icons-extended:$ver
 compose.livedata = "androidx.compose.runtime:runtime-livedata:$versions.compose"
 compose.activity = "androidx.activity:activity-compose:$versions.compose"
 compose.navigation = "androidx.navigation:navigation-compose:$versions.navigation"
-compose.pager = "com.google.accompanist:accompanist-pager:$versions.pager"
+compose.pager = "com.google.accompanist:accompanist-pager:$versions.accompanist"
+compose.system_ui = "com.google.accompanist:accompanist-systemuicontroller:$versions.accompanist"
 deps.compose = compose
 
 
