--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     api deps.compose.activity
     api deps.compose.navigation
     api deps.compose.pager
+    api deps.compose.system_ui
 }
